@@ -67,6 +67,7 @@ tasks.withType(Test) {
 test {
   failFast = false
   testLogging.showStandardStreams = true
+  jvmArgs = ["--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"]
 }
 
 artifacts {
@@ -142,8 +143,8 @@ dependencies {
     implementation group: 'io.cucumber', name: 'cucumber-java', version: '5.7.0'
     implementation group: 'io.cucumber', name: 'cucumber-junit', version: '5.7.0'
 
-    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
 
@@ -156,14 +157,15 @@ dependencies {
     implementation group: 'org.apache.poi', name: 'poi', version: '4.0.0'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.0'
 
+
     implementation group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'
 
     implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.+'
     implementation group: 'org.json', name: 'json', version: '20200518'
 
     testImplementation group: 'io.github.openfeign', name: 'feign-jackson', version: '9.7.0'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
-    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.4.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '4.5.1'
     testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '0.9.0'
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
     testRuntimeOnly  "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
@@ -192,4 +194,14 @@ def getCaseTypes() {
     }
     // TODO: Hardcode case types which are only available in spreadsheets and add to the list?
     return caseTypes
+}
+
+compileJava {
+    options.incremental = false
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
